// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MakeImage matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <ul
      class="MuiGridList-root makeStyles-gridlist-2"
      style="margin: 0px;"
    >
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName 1"
            src="mediumImageUrl 1"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName 2"
            src="mediumImageUrl 2"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName 3"
            src="mediumImageUrl 3"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName 4"
            src="mediumImageUrl 4"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="twitterId"
            src="image"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName 5"
            src="mediumImageUrl 5"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName 6"
            src="mediumImageUrl 6"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName 7"
            src="mediumImageUrl 7"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName 8"
            src="mediumImageUrl 8"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`MakeImage matches snapshot 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <ul
      class="MuiGridList-root makeStyles-gridlist-2"
      style="margin: 0px;"
    >
      <li
        class="MuiGridListTile-root"
        style="width: 100%; height: 360px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName"
            src="mediumImageUrl"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
